--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,41 @@
     transform: rotate(360deg);
   }
 }
+
+
+input {
+  color: inherit;
+  outline: none;
+  border: none;
+  background: none;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+}
+
+body, html {
+  height: 100%;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+}
+
+body {
+  position: relative;
+  font: 100%;
+  font-family: "Helvetica", "Arial", sans-serif;
+  font-weight: 100;
+  line-height: 1.5;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+ul {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
